# qe_micro_tools

./: LICENSE.txt  README.md  pyproject.toml
src/qe_micro_tools/: __about__.py  __init__.py  config.cfg  fix_xml.py  formats_and_units.py  print_cell.py  print_coords.py  read_xml.py  xml2dict.py
tests/: test_tools.py
tests/data/: data-file-schema.xml
