[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qe-micro-tools"
dynamic = ["version"]
description = "This project offers a collection of utilities for parsing and processing Quantum ESPRESSO output files and for preparing input files for Quantum ESPRESSO, BerkeleyGW (BGW), and Wannier90 workflows."
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "M.V. Klymenko", email = "misha.klymenko@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Physics",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/U.N. Owen/qe-micro-tools#readme"
Issues = "https://github.com/freude/qe-micro-tools/issues"
Source = "https://github.com/freude/qe-micro-tools"

[tool.hatch.version]
path = "src/qe_micro_tools/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/qe_micro_tools tests}"

[tool.coverage.run]
source_pkgs = ["qe_micro_tools", "tests"]
branch = true
parallel = true
omit = [
  "src/qe_micro_tools/__about__.py",
]

[tool.coverage.paths]
qe_micro_tools = ["src/qe_micro_tools", "*/qe-micro-tools/src/qe_micro_tools"]
tests = ["tests", "*/qe-micro-tools/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[project.scripts]
print_cell = "qe_micro_tools.print_cell:main"
print_coords = "qe_micro_tools.print_coords:main"

[tool.hatch.build.targets.wheel]
packages = ["src/qe_micro_tools"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]


